<resources>
    <string name="app_name">CalendrierServeur</string>

    <string-array name="days">
        <item>Lundi</item>
        <item>Mardi</item>
        <item>Mercredi</item>
        <item>Jeudi</item>
        <item>Vendredi</item>
        <item>Samedi</item>
        <item>Dimanche</item>
    </string-array>

    <!-- Paramètrage pour l'accès au serveur -->
    <string name="IP">http://192.168.0.28</string>
    <string name="Port">:8081/</string>
    <string name="Path">CalendrierServeur/rest/rdv/</string>

    <!-- Fonctions du serveur -->
    <string name="serverGet">get/</string>
    <string name="serverGetNombreDeRendezVous">getNbRdv</string>
    <string name="serverAjout">add</string>
    <string name="serverModification">update</string>
    <string name="serverSuppression">del</string>

    <!-- Autres ressources -->
    <string name="AddRdvButton">  Ajouter un rendez-vous  </string>
    <string name="ModifButton">Modifier</string>
    <string name="titre">Titre</string>
    <string name="description">Description</string>
    <string name="jour">Jour</string>
    <string name="heure">Heure</string>
    <string name="buttonConfirmModif">Confirmer les modifications</string>
    <string name="supprimer">Supprimer</string>
    <string name="buttonCreateRdv">Créer le rendez-vous</string>
    <string name="annuler">Annuler</string>


</resources>